--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,8 @@
 }
 html {
     background-color: #EEEEEE;
+    background-image: linear-gradient(to bottom, #fbc2eb 0%, #a6c1ee 100%);
+    
 }
 body {
     min-width: 230px;
@@ -13,6 +15,8 @@ body {
     webkit-box-sixing: webkit-box-sixing;
     background-color: #fff;
     height: calc(100vh - 40px);
+    background-image: linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%);
+    
 }
 .container-child__left {
     text-align: right;
@@ -28,8 +32,19 @@ body {
 h1 {
     margin: 0 0 35px 0;
     font-family: Helvetica, sans-serif;
-    color: #D8D8D8;
+    color: rgba(40, 54, 76, 0.8);
     font-size: 35px;
+    font-weight: 600;
+    letter-spacing: 0.45px;
+    background: linear-gradient(to right, #434343 0%, black 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+h3 {
+    margin: 0 0 35px 0;
+    font-family: Helvetica, sans-serif;
+    color: #D8D8D8;
+    font-size: 25px;
     font-weight: 600;
     letter-spacing: 0.45px;
 }
@@ -37,9 +52,9 @@ h1 {
     color: black;
 }
 ul, p {
-    font-weight: 500;
+    font-weight: 400;
     font-size: 18px;
-    font-family: 'Work Sans', sans-serif;
+    font-family: 'Helvetica', sans-serif;
     line-height: 36px;
     letter-spacing: 0.3px;
 }
@@ -47,14 +62,14 @@ li {
     list-style: none;
 }
 a {
-    color: #030EF6;
+    color: rgb(40, 54, 76);
 }
 li a {
     text-decoration: none;
 }
 b {
-    font-size: 20px;
-    font-weight: 200;
+    font-size: 18px;
+    font-weight: 410;
     color: #000;
     padding-left: 8px;
 }
@@ -144,3 +159,11 @@ b {
         padding-right: 25px;
         text-decoration: underline;
     }
+}
+
+.profile {
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+    margin: auto;
+}
